Preparing to deploy

--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
     </section>
 
     <section id="openSection">
-      <p class="titleText">Now explore the data on your own</p>
+      <p class="titleText">Now explore the uninsured rate on your own</p>
       <p class="subtitleText">Whether by state over time...</p>
       <p class="smallText">Hover to highlight a state's line.</p>
       <div id="lineChart2">
       </div>
 
       <div id="mapDiv">
-        <p class="subtitleText">...By county in 2018...</p>
+        <p class="subtitleText">...by county in 2018...</p>
         <p class="smallText">Hover to see the county name, and click to zoom.</p>
         <div id="mapLegend"></div>
         <div id="countyMap2"></div>
       </div>
 
       <div id="demographics">
-        <p class="subtitleText">...Or in 2018 by demographic group.</p>
+        <p class="subtitleText">...or by demographic group in 2018.</p>
       </div>
       <p class="smallText">
         *Income is in relation to the federal poverty line (FPL),
@@ -95,7 +95,7 @@
     </section>
 
     <section id="sources">
-      <p class="subtitleText">Sources</p>
+      <p class="paragraphText">Sources</p>
       <p class="smallText">
         Data on the percent uninsured over time, by county, and by race
         are from the Census Bureau's 
@@ -108,6 +108,14 @@
         Percent uninsured by income level and by age, as well
         as Medicaid expansion status by state, are from the
         <a href="https://www.kff.org/statedata/">Kaiser Family Foundation State Health Facts.</a>
+      </p>
+
+      <p class="smallText">
+        Thanks to the <a href="https://pudding.cool/process/introducing-scrollama/">Scrollama</a>
+        package for scrolling elements. And thanks to Mike Bostock for his many publicly available code samples, including for
+        <a href="https://observablehq.com/@d3/multi-line-chart">interactive line charts,</a>
+        <a href="https://observablehq.com/@d3/color-legend">color legends,</a>
+        and <a href="https://observablehq.com/@d3/zoom-to-bounding-box">click-to-zoom maps.</a>
       </p>
     </section>
 
