--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Scaffold</title>
+    <title>Dynamic Project</title>
   </head>
   <body>
     <div id="intro">
@@ -112,7 +112,7 @@
 
       <p class="smallText">
         Thanks to the <a href="https://pudding.cool/process/introducing-scrollama/">Scrollama</a>
-        package for scrolling elements. And thanks to Mike Bostock for his many publicly available code samples, including for
+        package for scrolling elements. And thanks to Mike Bostock for his many publicly available code samples, including
         <a href="https://observablehq.com/@d3/multi-line-chart">interactive line charts,</a>
         <a href="https://observablehq.com/@d3/color-legend">color legends,</a>
         and <a href="https://observablehq.com/@d3/zoom-to-bounding-box">click-to-zoom maps.</a>
