Updated highlighting and added Medicaid expansion to bar charts

--- a/index.html
+++ b/index.html
@@ -106,14 +106,19 @@
       </p>
 
       <p class="smallText">
-        Percent uninsured by income level and by age, as well
-        as Medicaid expansion status by state, are from the
+        Percent uninsured by 
+        <a href="https://www.kff.org/uninsured/state-indicator/nonelderly-uninsured-rate-federal-poverty-level-fpl/?currentTimeframe=1&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D">
+          income level</a> and by 
+        <a href="https://www.kff.org/uninsured/state-indicator/nonelderly-uninsured-rate-by-age/?currentTimeframe=1&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D">
+          age</a>, as well as 
+        <a href="https://www.kff.org/health-reform/state-indicator/medicaid-expansion-enrollment/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D">
+          Medicaid expansion status by state</a>, are from the
         <a href="https://www.kff.org/statedata/">Kaiser Family Foundation State Health Facts.</a>
       </p>
 
       <p class="smallText">
         Thanks to the <a href="https://pudding.cool/process/introducing-scrollama/">Scrollama</a>
-        package for scrolling elements. And thanks to Mike Bostock for his many publicly available code samples, including
+        package for scrolling elements. And thanks to Mike Bostock for his many publicly available D3 code samples, including
         <a href="https://observablehq.com/@d3/multi-line-chart">interactive line charts,</a>
         <a href="https://observablehq.com/@d3/color-legend">color legends,</a>
         and <a href="https://observablehq.com/@d3/zoom-to-bounding-box">click-to-zoom maps.</a>
