Code clean up and update readme

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <div id="mapDiv">
         <p class="subtitleText">...by county in 2018...</p>
-        <p class="smallText">Hover to see the county name, and click to zoom.</p>
+        <p class="smallText">Hover to see the county name, and click or scroll to zoom.</p>
         <div id="mapLegend"></div>
         <div id="countyMap2"></div>
       </div>
